--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
-        android:hint="Cost of Serivce"
+        android:hint="@string/cost_of_serivce"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
